# mcp-oauth-mcpserver-blueprint

./: .do.not.check.in  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mcp-oauth-mcpserver-blueprint.code-workspace  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: README.md  create-issues.py
.github/workflows/: ci.yml  cleanup-combined-prs.yml  combine-dependency-prs.yml  create-code-review-issues.yml  mcp-tester.yml  test.yml  verify-scripts.yml
.github/workflows/scripts/: mcp-debug-wrapper.sh
code-reviews/: README.md  code-review-instructions.md  create-review-issues.sh
code-reviews/2025-10-26-comprehensive-review/: CODE_REVIEW_ISSUES.md  CODE_REVIEW_SUMMARY.md  ISSUE_LIST.md  NEXT_STEPS.md  QUICK_START_ISSUES.md  README.md
docs/: AUTHORIZATION_FLOW_SUMMARY.md  AUTHORIZATION_GUIDE.md  AUTHORIZATION_QUICK_REFERENCE.md  CODE_QUALITY.md  COMBINING_DEPENDABOT_PRS.md  HTTP_TRANSPORT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MCP_AUTHORIZATION_ANALYSIS.md  README_AUTHORIZATION_FIX.md  RESEARCH.md  SPEC_UPDATE_2025-06-18.md  sampling.md  setup-auth-github.md
runlocal/: config.json  run-inspector.ps1  run-inspector.sh
scripts/: build-docker.ps1  build-docker.sh  run.ps1  run.sh  set-execution-policy.ps1  setup.ps1  setup.sh  stop.ps1  stop.sh  test.ps1  test.sh
src/: package-lock.json
src/mcp_server/: __init__.py  api_client.py  config.py  http_endpoints.py  main.py  oauth_handler.py  server.py
test_venv/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_http_endpoints.py  test_http_endpoints_integration.py  test_oauth_handler.py  test_repository_analysis.py  test_sampling.py
